Refactor native resource management to use Cleaner API
- Introduced `CefCleaner` and `NativeCleanup` classes to replace deprecated finalization methods with a more robust and explicit cleanup mechanism.
- Updated various callback classes (e.g., `CefDragData_N`, `CefFileDialogCallback_N`, `CefJSDialogCallback_N`, etc.) to utilize the new cleanup system, ensuring proper resource disposal.
- Removed finalize methods from classes that previously relied on them for cleanup.
- Added atomic flags to prevent multiple cleanup calls and ensure resources are released correctly.
- Enhanced native reference handling in classes like `CefPrintSettings_N`, `CefRequest_N`, and others to integrate with the new cleanup strategy.
- Updated tests and example implementations to reflect changes in resource management.